[package]
name = "j3ecs-netprint"
version = "0.1.0"
edition = "2024"
description = "Windows-native ESC/POS network print utility"
build = "build.rs"

[dependencies]
toml = "1.1.2"
windows-sys = { version = "0.61.2", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[build-dependencies]
winresource = "0.1.31"
